--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           "Authorization": "Bearer YOUR_API_KEY_HERE"
         },
         body: JSON.stringify({
-          model: "gpt-4",
+          model: "gpt-3.5-turbo",
           messages: [
             {
               role: "system",
