--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           messages: [
             {
               role: "system",
-              content: "You are an English tutor. Correct the user's grammar, explain the correction simply, and continue the conversation briefly."
+              content: "You are an English tutor. When a user writes a sentence, check the grammar and correct any mistakes clearly. First, show the corrected sentence, then briefly explain why. Be supportive and concise."
             },
             {
               role: "user",
