--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     body { font-family: Arial; padding: 30px; background-color: #f9f9f9; }
     textarea { width: 100%; height: 100px; }
     button { padding: 10px 20px; margin-top: 10px; }
-    .response { margin-top: 20px; white-space: pre-wrap; }
+    .response { margin-top: 20px; white-space: pre-wrap; color: #333; }
+    .error { color: red; }
   </style>
 </head>
 <body>
@@ -20,9 +21,15 @@
 
   <script>
     async function sendToGPT() {
-      const input = document.getElementById("userInput").value;
+      const input = document.getElementById("userInput").value.trim();
       const responseBox = document.getElementById("gptResponse");
-      responseBox.innerHTML = "GPT가 응답 중입니다...";
+
+      if (!input) {
+        responseBox.innerHTML = "<span class='error'>❗ 문장을 입력해주세요.</span>";
+        return;
+      }
+
+      responseBox.innerHTML = "⌛ GPT가 응답 중입니다... 잠시만 기다려주세요.";
 
       try {
         const result = await fetch("/api/chat", {
@@ -33,10 +40,21 @@
           body: JSON.stringify({ input })
         });
 
+        if (!result.ok) {
+          throw new Error(`서버 응답 오류 (status: ${result.status})`);
+        }
+
         const data = await result.json();
-        responseBox.innerHTML = data.reply;
+
+        if (data.reply) {
+          responseBox.innerHTML = data.reply;
+        } else if (data.error) {
+          responseBox.innerHTML = `<span class='error'>❌ 오류: ${data.error}</span>`;
+        } else {
+          responseBox.innerHTML = "<span class='error'>❌ 알 수 없는 응답 형식입니다.</span>";
+        }
       } catch (error) {
-        responseBox.innerHTML = "❌ 오류가 발생했어요: " + error.message;
+        responseBox.innerHTML = `<span class='error'>❌ 오류가 발생했어요: ${error.message}</span>`;
       }
     }
   </script>
